--- a/ATM/res/menu/view_profile.xml
+++ b/ATM/res/menu/view_profile.xml
@@ -8,7 +8,8 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     
-    <item android:id="@+id/item1" 
+    <item 
+      android:id="@+id/add" 
       android:icon="@android:drawable/ic_input_add"
       android:title="@string/add" 
       android:showAsAction="ifRoom|withText">
