--- a/MyMeetingPlaces/res/drawable/rounded_blue.xml
+++ b/MyMeetingPlaces/res/drawable/rounded_blue.xml
@@ -1,10 +1,11 @@
-
+<?xml version="1.0" encoding="utf-8"?>
 
 <shape  xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:shape="rectangle"> 
 	
-	<solid android:color="@android:color/darker_gray"/> 
+	<solid android:color="@android:color/holo_blue_bright"/>
+	<stroke android:width="5px" android:color="@android:color/holo_blue_light" /> 
 	
 	<corners android:radius="5sp"/>
 	
