--- a/MyMeetingPlaces/res/menu/single_profile.xml
+++ b/MyMeetingPlaces/res/menu/single_profile.xml
@@ -1,17 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.ftfl.mymeetingplace.ViewPlacesListActivity" >
+    tools:context="com.ftfl.mymeetingplace.ViewSingleProfileActivity" >
 
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"/>    
     
     <item 
-      android:id="@+id/add" 
-      android:icon="@android:drawable/ic_input_add"
-      android:title="@string/add" 
+      android:id="@+id/edit" 
+      android:icon="@android:drawable/ic_menu_edit"
+      android:title="@string/edit" 
       android:showAsAction="ifRoom|withText"/>
 
 </menu>
